fixing padding and spacing

--- a/src/app/todo-item/todo-item.component.css
+++ b/src/app/todo-item/todo-item.component.css
@@ -15,6 +15,7 @@
 
 .todoRow{
     display: flex;
+    height: 60px;
 }
 
 .f1{flex:1;}
