--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -1,16 +1,19 @@
-.categories{
-    background-color: lightgrey;
+.flex{
     display: flex;
+    margin-bottom: 16px;
 }
-.flex1{flex:1;}
-.flex2{flex:2;}
-.flex3{flex:3;}
-
+.list-box{
+    padding-left:24px;
+}
+.text-center{
+    text-align: center;
+}
 .p10{
     width: 10%;
     min-width: 50px;
     max-width: 100px;
 }
+
 .p20{
     width: 20%;
     min-width: 100px;
